--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "mongoose": "^8.12.1",
-    "next": "15.2.1",
+    "mongoose": "^8.15.1",
+    "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.1",
+    "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
