--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "imagekit": "^6.0.0",
+    "imagekitio-next": "^1.0.1",
     "mongoose": "^8.16.1",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
